Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-1902] fixed some possibilities to create incorrect linkage (Vedmak)
 - [ZBX-2386] rows per page limit increased (Vedmak)
 - [ZBX-2306] fixed zoom position (Aly)
 - [ZBX-2306] improved starting zoom on edges (Aly)
 - [ZBX-2132] added date format constants to locales, changed zbx_date2str function to meet regional formats and date translation
 - [ZBXNEXT-311] improved speedup dbconfig synchronization (Sasha)
 - [ZBX-2378] renamed calculated item field 'Expression' to 'Formula', changed trigger option 'Multiple TRUE events' to use 'PROBLEM' instead (Richlv)
 - [ZBX-2360] added multiple acknowledging for OK>UNKNOWN>OK and PROBLEM>UNKNOWN>PROBLEM events (Vedmak,Sasha)
 - [ZBX-2374] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-2347] fixed last 20 issues in event details showing less than 20 issues (Vedmak)
 - [DEV-459] made improvements in discovery page generation (Aly)
 - [ZBX-2148] added preview button in graphs form (Aly)
 - [ZBX-2337] fixed error when select web item in trigger configuration (Vedmak)
 - [ZBX-2306] fixed links for graphs in screens (Aly)
 - [ZBX-633] removed linkage of OpenIPMI library to Agents in "configure" script (Sasha) 
 - [ZBX-633] more debug information in checks_ipmi.c module (Sasha) 
 - [ZBX-2362] fixed processing of logrt[] checks under Windows (Sasha)
 - [ZBX-2356] fixed error when perform group actions creating item (Vedmak)
 - [ZBX-2355] fixed error when try to massupdate trigger severity (Vedmak)
 - [ZBX-2354] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2352] fixed typo in the default locale (Richlv)
 - [ZBX-2312] fixed event order in "monitoring triggers" and "last 20 events" (Vedmak)