@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-1505] fixed user macros not resolved in frontend (Vedmak)
  - [ZBX-1902] fixed some possibilities to create incorrect linkage (Vedmak)
  - [ZBX-2386] rows per page limit increased (Vedmak)
  - [ZBX-2306] fixed zoom position (Aly)
